--- a/package.json
+++ b/package.json
@@ -13,52 +13,9 @@
       "/home/pablo/projects/Intelligize.UI"
     ]
   ],
-  "_from": "git-changelog@latest",
-  "_id": "git-changelog@1.0.1",
-  "_inCache": true,
-  "_installable": true,
-  "_location": "/git-changelog",
-  "_nodeVersion": "6.3.0",
-  "_npmOperationalInternal": {
-    "host": "packages-12-west.internal.npmjs.com",
-    "tmp": "tmp/git-changelog-1.0.1.tgz_1469794880126_0.2808624494355172"
-  },
-  "_npmUser": {
-    "name": "rafinskipg",
-    "email": "rafinskipg@gmail.com"
-  },
-  "_npmVersion": "3.10.3",
-  "_phantomChildren": {
-    "jsonfile": "2.3.1",
-    "natives": "1.1.0",
-    "rimraf": "2.5.4"
-  },
-  "_requested": {
-    "raw": "git-changelog",
-    "scope": null,
-    "escapedName": "git-changelog",
-    "name": "git-changelog",
-    "rawSpec": "",
-    "spec": "latest",
-    "type": "tag"
-  },
-  "_requiredBy": [
-    "#USER"
-  ],
-  "_resolved": "https://registry.npmjs.org/git-changelog/-/git-changelog-1.0.1.tgz",
-  "_shasum": "55a90dc4ed883ce15d577763d263dcc46b769a78",
-  "_shrinkwrap": null,
-  "_spec": "git-changelog",
-  "_where": "/home/pablo/projects/Intelligize.UI",
-  "author": {
-    "name": "rafinskipg",
-    "email": "rafinskipg@gmail.com"
-  },
+  "author": "",
   "bin": {
-    "git-changelog": "tasks/command.js"
-  },
-  "bugs": {
-    "url": "https://github.com/rafinskipg/git-changelog/issues"
+    "git-changelog-fdv": "tasks/command.js"
   },
   "dependencies": {
     "change-case": "^3.0.0",
@@ -82,39 +39,16 @@
     "sinon": "^1.14.1",
     "sinon-chai": "^2.7.0"
   },
-  "directories": {},
-  "dist": {
-    "shasum": "55a90dc4ed883ce15d577763d263dcc46b769a78",
-    "tarball": "https://registry.npmjs.org/git-changelog/-/git-changelog-1.0.1.tgz"
-  },
-  "engines": {
-    "node": ">= 0.12.0"
-  },
-  "gitHead": "9a2ce864b4e79080bf4d01e0c912c265b40573ca",
-  "homepage": "https://github.com/rafinskipg/git-changelog",
-  "keywords": [
-    "gruntplugin, git, git-changelog, angularjs, angular, commit, log"
-  ],
-  "licenses": [
-    {
-      "type": "MIT",
-      "url": "https://github.com/rafinskipg/git-changelog/blob/master/LICENSE-MIT"
-    }
-  ],
+  "keywords": [],
+  "licenses": "ISC",
   "main": "Gruntfile.js",
-  "maintainers": [
-    {
-      "name": "rafinskipg",
-      "email": "rafinskipg@gmail.com"
-    }
-  ],
-  "name": "git-changelog",
+  "name": "git-changelog-fdv",
   "optionalDependencies": {},
   "preferGlobal": "true",
   "readme": "ERROR: No README data found!",
   "repository": {
     "type": "git",
-    "url": "git://github.com/rafinskipg/git-changelog.git"
+    "url": "git://github.com/ratonjuancarlos/git-changelog.git"
   },
   "scripts": {
     "coverage": "istanbul cover node_modules/.bin/_mocha -- -R dot",
